Round Robin Flow/objects/Assignment_Group__c/fields/No_of_Active_members__c.field-meta.xml
<CustomField>
    <fullName>No_of_Active_members__c</fullName>
    <label>No of Active members</label>
    <summaryForeignKey>Assignment_Members__c.Lead_Assignment_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>